JETcompiler/Tests/bad/bad002.myout
Parsing error: no viable alternative for token: "a" in line 1
